# pyrasim

./: .gitignore  IFFT.ipynb  README.md  bandwith-constante-10.json  bandwith-constante-20.json  bandwith-constante-30.json  f_inicial_variable-100.json  f_inicial_variable-200.json  f_inicial_variable-300.json  f_inicial_variable-400.json  main.ipynb  main.py  parser.py  pyproject.toml  step_frequency_constante-10.json  step_frequency_constante-20.json  step_frequency_constante-30.json  teory.md
src/generator/: sfcw_signal_generator_simul.grc  sfcw_signal_generator_simul.py
src/processor/: constants.py  plot.py  sfcw_signal_processor_sim.py  utils.py
src/pyrasim/: constants.py  version.py
src/pyrasim/cli/: __init__.py  config.py
src/pyrasim/sfcw/: __init__.py  utils.py
src/pyrasim/signals/: __init__.py  sinusoid.py
